fix: overflow horizontal global

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 body {
@@ -33,8 +34,5 @@ body {
   font-family: var(--font-sans);
   overflow-x: hidden;
   max-width: 100vw;
-}
-
-section, nav, footer, div {
-  max-width: 100%;
+  position: relative;
 }
